fix: fix images overflowing staff section

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -176,9 +176,9 @@ p {
   display: flex;
   flex-wrap: wrap;
   gap: 0.5em;
-  max-height: 300px;
   max-width: 650px;
   box-sizing: border-box;
+  height: auto;
 }
 
 .block {
